# DoodleJump

./: .gitignore  CMakeLists.txt
src/: Console.c  Console.h  Cursor.c  Game.c  Game.h  main.c
src/Console/: Console.c  Cursor.c  Cursor.h  MainOptions.c  UserInput.c  UserInput.h
